# Day_a_bite

./: flet.py
dayAbite/: db.sqlite3  manage.py  pyproject.toml
dayAbite/core_app/: admin.py  models.py  urls.py  utils.py  views.py
dayAbite/core_app/migrations/: 0001_initial.py  0002_alter_insulinshot_options_alter_measurement_options_and_more.py
dayAbite/core_app/templates/: hello.html
dayAbite/custom_user/: models.py
dayAbite/custom_user/migrations/: 0001_initial.py
dayAbite/dayAbite/: asgi.py  settings.py  urls.py  wsgi.py
