[tool.poetry]
name = "dayabite"
version = "0.1.0"
description = ""
authors = ["Dmytro Vaskovets <dmitriy.vaskovets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
django-bootstrap-v5 = "^1.0.11"
django-use-email-as-username = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
